# pro_11

./: .pre-commit-hooks.yaml  README.md  action.yml  policy.yaml  pyproject.toml
.github/workflows/: gha-lint.yml
docs/: ITERATION_PROMPT.md  REFACTOR_LOG.md
src/gha_lint/: __init__.py  cli.py  dependency.py  formatter.py  models.py  parser.py  policy.py  rules.py  scan_paths.py  schema.py  schema_defs.py  scoring.py
src/gha_lint/rules/: __init__.py  actions_must_pin_sha.py  base.py  forbid_curl_pipe_bash.py  forbidden_actions.py  matrix_not_expanded.py  permissions_default_read.py  registry.py  require_concurrency.py  require_timeout_minutes.py  schema_validation.py  secrets_naming.py
tests/: test_formatter.py  test_new_features.py  test_rules.py
